[gd_scene load_steps=50 format=3 uid="uid://cob7nw0iuoeix"]

[ext_resource type="Script" path="res://Character/Galang/galang.gd" id="1_rr5vo"]
[ext_resource type="Texture2D" uid="uid://dg8tc56uqk7tx" path="res://Assets/City_men_3/Attack.png" id="2_hdik5"]
[ext_resource type="Texture2D" uid="uid://jq62b3lo40ae" path="res://Assets/City_men_3/Dead.png" id="3_l5bxr"]
[ext_resource type="Texture2D" uid="uid://51evde6mi76t" path="res://Assets/City_men_3/Hurt.png" id="4_2mkl8"]
[ext_resource type="Texture2D" uid="uid://drv52ut3am7j5" path="res://Assets/City_men_3/Idle.png" id="5_x52ov"]
[ext_resource type="Texture2D" uid="uid://yxs1ugb7v7u5" path="res://Assets/City_men_3/Walk.png" id="6_ew4tx"]
[ext_resource type="Texture2D" uid="uid://ble5heehalfsy" path="res://Assets/City_men_3/Run.png" id="7_lsqoe"]
[ext_resource type="PackedScene" uid="uid://cp8v0wmspt1th" path="res://HealthBarGalang.tscn" id="8_r1try"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dvw8l"]
atlas = ExtResource("2_hdik5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6e3x"]
atlas = ExtResource("2_hdik5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_631qt"]
atlas = ExtResource("2_hdik5")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoqdu"]
atlas = ExtResource("2_hdik5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_43qbn"]
atlas = ExtResource("3_l5bxr")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_obt4g"]
atlas = ExtResource("3_l5bxr")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8435"]
atlas = ExtResource("3_l5bxr")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw5ab"]
atlas = ExtResource("3_l5bxr")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c2lm"]
atlas = ExtResource("3_l5bxr")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d61pf"]
atlas = ExtResource("4_2mkl8")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d1sh"]
atlas = ExtResource("4_2mkl8")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ii46"]
atlas = ExtResource("4_2mkl8")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_btnjk"]
atlas = ExtResource("5_x52ov")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_liia1"]
atlas = ExtResource("5_x52ov")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaxff"]
atlas = ExtResource("5_x52ov")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7kjt"]
atlas = ExtResource("5_x52ov")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8ipu"]
atlas = ExtResource("5_x52ov")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebcf1"]
atlas = ExtResource("5_x52ov")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu3k8"]
atlas = ExtResource("6_ew4tx")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g5vd"]
atlas = ExtResource("6_ew4tx")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm1x4"]
atlas = ExtResource("6_ew4tx")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwml4"]
atlas = ExtResource("6_ew4tx")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7pws"]
atlas = ExtResource("6_ew4tx")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ol7"]
atlas = ExtResource("6_ew4tx")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uqwe"]
atlas = ExtResource("6_ew4tx")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncngh"]
atlas = ExtResource("6_ew4tx")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_blxao"]
atlas = ExtResource("6_ew4tx")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f47wh"]
atlas = ExtResource("6_ew4tx")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wfjrh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvw8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6e3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_631qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoqdu")
}],
"loop": false,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43qbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obt4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8435")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw5ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c2lm")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d61pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d1sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ii46")
}],
"loop": false,
"name": &"hurt",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btnjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liia1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaxff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7kjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8ipu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebcf1")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu3k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g5vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm1x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwml4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7pws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ol7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uqwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncngh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blxao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f47wh")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sj1cm"]
radius = 11.0
height = 101.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fewtt"]
radius = 11.0
height = 109.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmnu5"]
size = Vector2(99, 18.5)

[sub_resource type="Animation" id="Animation_unhln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_x52ov")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x5216"]
resource_name = "attack"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hdik5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xw8un"]
resource_name = "death"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_l5bxr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_hidie"]
resource_name = "hurt"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_2mkl8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_tkq3b"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_x52ov")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_cxw7n"]
resource_name = "run"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_lsqoe")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_2supn"]
resource_name = "walk"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_ew4tx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cblj"]
_data = {
"RESET": SubResource("Animation_unhln"),
"attack": SubResource("Animation_x5216"),
"death": SubResource("Animation_xw8un"),
"hurt": SubResource("Animation_hidie"),
"idle": SubResource("Animation_tkq3b"),
"run": SubResource("Animation_cxw7n"),
"walk": SubResource("Animation_2supn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pn425"]
size = Vector2(111, 19)

[node name="Galang" type="CharacterBody2D"]
script = ExtResource("1_rr5vo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.70313, 1.69531)
sprite_frames = SubResource("SpriteFrames_wfjrh")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.7168, 1.68359)
texture = ExtResource("5_x52ov")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 58)
shape = SubResource("CapsuleShape2D_sj1cm")

[node name="DirectionTimer" type="Timer" parent="."]

[node name="GalangHitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GalangHitbox"]
position = Vector2(-3, 54)
shape = SubResource("CapsuleShape2D_fewtt")

[node name="GalangAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GalangAttack"]
position = Vector2(-2.5, 26)
shape = SubResource("RectangleShape2D_nmnu5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6cblj")
}

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(-3, 25.5)
shape = SubResource("RectangleShape2D_pn425")

[node name="HealthBarGalang" parent="." instance=ExtResource("8_r1try")]
offset_left = -49.0
offset_top = -16.0
offset_right = -49.0
offset_bottom = -16.0

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="GalangHitbox" to="." method="_on_galang_hitbox_area_entered"]
[connection signal="area_entered" from="GalangAttack" to="." method="_on_galang_attack_area_entered"]
[connection signal="area_entered" from="DetectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="area_exited" from="DetectArea" to="." method="_on_detect_area_area_exited"]
